<?xml version="1.0"?>
<package format="2">
  <name>init_rovio_npose0</name>
  <version>0.0.0</version>
  <description>
    Nodes to initiliaze ROVIO when compiled with option NPOSE=0.
  </description>

  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>rovio</depend>
  <depend>tf</depend>
  <depend>piksi_multi_rtk_gps</depend>

</package>
